[project]
name = "gst"
version = "0.1.0"
description = "GitHub Gist cli without github, only gist."
readme = "README.md"
authors = [
    { name = "Adrian Makridenko", email = "adrianmakridenko@duck.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.19.2",
]

[project.scripts]
gst = "gst:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
