[project]
name = "gst"
version = "0.1.0"
description = "GitHub Gist cli without github, only gist."
readme = "README.md"
authors = [
    { name = "Adrian Makridenko", email = "adrianmakridenko@duck.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.19.2",
]

[project.scripts]
gst = "gst:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "icecream>=2.1.8",
    "isort>=6.0.1",
    "ruff>=0.13.2",
]

[tool.ruff]
target-version = "py39"
line-length = 80
ignore = ["UP009", "D100"]
exclude = ["*__init__.py", "tests/", "*exceptions/"]

[tool.ruff.lint]
extend-select = ["UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
balanced_wrapping = true
known_first_party = "src"
line_length = 80
lines_after_imports = 2
lines_between_sections = 1
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["env", ".env", ".env.example", "migrations/", ".venv/"]

[tool.black]
line-length = 80
skip-string-normalization = false
